fixed z-index

--- a/app/sass/popUp/_popUp.scss
+++ b/app/sass/popUp/_popUp.scss
@@ -1,12 +1,12 @@
 .pop-up-wrapper {
-    z-index: 8;
+    z-index: 6;
     width: 100vw;
     position: absolute;
     height: 100%;
     top: 0;
     overflow: auto;
     .pop-up {
-        z-index: 8;
+        z-index: 6;
         position: absolute;
         top: 25%;
         left: 50%;
@@ -51,9 +51,9 @@
             color: $italicLinkFontColor;
             text-align: center;
         }
-        &.pop-up-success, &.pop-up-success-check-in, &.pop-up-send-message {
-            @include calc(top, 74);
-        }
+        // &.pop-up-success, &.pop-up-success-check-in, &.pop-up-send-message {
+        //     @include calc(top, 74);
+        // }
         &.pop-up-subcategories {
             @include calc(top, 57);
             @include calc(padding-top, 12);
@@ -73,7 +73,7 @@
     width: 100vw;
     height: 0;
     background-color:rgba(0, 0, 0, 0.5);
-    z-index: 7;
+    z-index: 5;
 }
 // sort
 .pop-up-sort-wrapper {
